tests/extends/extends.exp
Error ------------------------------------------------------------------------------------------------------ test.js:6:7

Cannot extend `C` [1] with `B` because string [1] is not inheritable. [incompatible-use]

   test.js:6:7
   6| class B extends C {}
            ^

References:
   test.js:6:17
   6| class B extends C {}
                      ^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:30:17

Cannot extend `D` [1] with `obj` because `obj` [2] is not inheritable. [incompatible-use]

   test.js:30:17
   30| class D extends obj {}
                       ^^^ [2]

References:
   test.js:30:7
   30| class D extends obj {}
             ^ [1]



Found 2 errors
